# first-vulkan-scene

./: .gitignore  .gitmodules  :w  CMakeLists.txt  LICENSE  README.md  build.sh  imgui.ini  run.sh
shaders/: bloom.frag  bloom.vert  blur.frag  blur.frag.spv  blur.vert  blur.vert.spv  comp.spv  compile_shaders.sh  frag.spv  fragment.frag  gauss.frag  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  particle.frag  particle.frag.spv  particle.vert  particle.vert.spv  scene.frag  scene.frag.spv  scene.vert  scene.vert.spv  shader.comp  shadowmap.frag  shadowmap.frag.spv  shadowmap.vert  shadowmap.vert.spv  showcubemap.frag  showcubemap.frag.spv  showcubemap.vert  showcubemap.vert.spv  showshadowmap.frag  showshadowmap.vert  ssao.frag  ssao.frag.spv  ssao.vert  ssao.vert.spv  tri_mesh.vert  tri_mesh.vert.spv  (+3 more)
src/: Bitmap.h  Eye.hpp  Mesh.cpp  Mesh.hpp  ParticleSystem.hpp  Texture.cpp  Texture.hpp  Timer.hpp  main.cpp  vk_utils.cpp  vk_utils.h
